--- a/pescuiala/balti/templates/balti/balta.html
+++ b/pescuiala/balti/templates/balti/balta.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PESCUIALĂ</title>
-</head>
-
-<body>
-    <div>
-        <h1>{{ balta }}</h1>
-        <ul>
-            {% for recenzie in balta.recenzie_set.all %}
-            <li>{{ recenzie.title }} - {{ recenzie.stars }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div>
-        <form action="{% url 'balti:detail' balta.name %}" method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Trimite recenzie">
-        </form>
-    </div>
-</body>
-
-</html>
+{% extends "balti/base.html" %}
+{% block title %}
+PESCUIALĂ - {{ balta.name }}
+{% endblock title %}
+{% block content %}
+<div>
+    <h1>{{ balta }}</h1>
+    <ul>
+        {% for recenzie in balta.recenzie_set.all %}
+        <li>{{ recenzie.title }} - {{ recenzie.stars }}</li>
+        {% endfor %}
+    </ul>
+</div>
+<div>
+    <form action="{% url 'balti:detail' balta.name %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Trimite recenzie">
+    </form>
+</div>
+{% endblock content %}
