--- a/pescuiala/balti/templates/balti/balta.html
+++ b/pescuiala/balti/templates/balti/balta.html
@@ -7,7 +7,8 @@ PESCUIALĂ - {{ balta.name }}
     <h1>{{ balta }}</h1>
     <ul>
         {% for recenzie in balta.recenzie_set.all %}
-        <li>{{ recenzie.title }} - {{ recenzie.stars }}</li>
+        <li>{{ recenzie.title }} - {{ recenzie.stars }}<br>{{ recenzie.review }}
+        </li>
         {% endfor %}
     </ul>
 </div>
