--- a/pescuiala/balti/templates/balti/navbar.html
+++ b/pescuiala/balti/templates/balti/navbar.html
@@ -18,7 +18,8 @@
                 </li>
             </ul>
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Nume baltă" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Nume baltă" aria-label="Search"
+                    name="search">
                 <button class="btn btn-outline-success" type="submit">Caută</button>
             </form>
         </div>
